[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }